--- a/styles/index.css
+++ b/styles/index.css
@@ -78,6 +78,7 @@ h4 {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  /*gap: 20px;*/
 }
 .alinearArriba {
   align-items: flex-start;
@@ -246,8 +247,24 @@ header.sticky-header {
   max-width: 100%;
   height: auto;
 }
+.contenedorPortada {
+  align-content: baseline;
+}
 /* --- PIE E IMAGEN LOGO PORTADA --- */
 
+.pieDeBanner {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  height: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+}
+.elementoPortada2 {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
 /*===============================================*/
 /*    NOSOTROS                                   */
 /*===============================================*/
@@ -264,7 +281,8 @@ header.sticky-header {
 }
 .textTitulares {
   color: var(--azulclaro);
-}
+  padding-top: 20px;
+ }
 /*===============================================*/
 /*    ACCIONES                                   */
 /*===============================================*/
@@ -311,6 +329,10 @@ header.sticky-header {
   font-weight:600;
   transition: all 0.2s ease;
   text-decoration: none;
+  width: fit-content;
+  margin: 0 auto;
+  display: block;
+
 }
 .botonSecundario:hover,
 .botonSecundario:focus {
@@ -373,7 +395,11 @@ header.sticky-header {
 
 }
 .boxDoble img{
-
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10px; 
+  border: 3px solid var(--celeste);
 }
 /*===============================================*/
 /*    CONTACTO                                   */
