--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -24,6 +24,9 @@
   .header-flex {
     padding: 5px;
   }
+  .textDosColumnas p{
+    margin: 0;
+  }
 }
 
 @media (min-width: 1025px) {
@@ -34,6 +37,48 @@
 
 
 
+
+
+
+
+/*===============================================*/
+/*     Mobile, Tablet                            */
+/*===============================================*/
+/*@media (max-width:1200px){
+  #portada {
+    min-height: 50vh; 
+  }
+}
+@media (max-width: 1024px) {
+  #navegador {
+    display: none;
+  }  
+}
+@media (max-width:1100px){
+	.contenedor {
+		max-width: 900px;
+	}
+}
+@media (max-width:850px){
+	.contenedor {
+		padding-left: 20px;
+    padding-right: 20px;
+	}
+  .header-flex {
+    padding: 5px;
+  }
+}
+
+@media (min-width: 1025px) {
+  #hamburguer-btn {
+    display:none;
+  }
+}
+
+
+.textDosColumnas p{
+  margin: 0;
+}
 
 
 /*@media (max-width: 768px) {
@@ -61,3 +106,5 @@
         }
       }
     }
+
+    
